--- a/src/main/resources/templates/noresult.html
+++ b/src/main/resources/templates/noresult.html
@@ -16,7 +16,7 @@
 <script>
     $(function () {
         $.ajax({
-            url:'/no/result/1451',//请求数据的地址
+            url:'/aqi/no/result/1451',//请求数据的地址
             type : "get",
             async : true,            //异步请求（同步请求将会锁住浏览器，用户其他操作必须等待请求完成才可以执行）
             data : {},
