--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,11 +4,29 @@
     <meta charset="utf-8"><link rel="icon" href="https://jscdn.com.cn/highcharts/images/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
-
+        .list-group-horizontal .list-group-item {
+            display: inline-block;
+        }
+        .list-group-horizontal .list-group-item {
+            margin-bottom: 0;
+            margin-left:-4px;
+            margin-right: 0;
+        }
+        .list-group-horizontal .list-group-item:first-child {
+            border-top-right-radius:0;
+            border-bottom-left-radius:4px;
+        }
+        .list-group-horizontal .list-group-item:last-child {
+            border-top-right-radius:4px;
+            border-bottom-left-radius:0;
+        }
     </style>
-    <link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
-    <script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
-    <script src="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.bootcss.com/bootstrap-datetimepicker/4.17.47/css/bootstrap-datetimepicker.min.css" rel="stylesheet">
+    <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.js"></script>
+    <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="https://cdn.bootcss.com/moment.js/2.24.0/moment-with-locales.js"></script>
+    <script src="https://cdn.bootcss.com/bootstrap-datetimepicker/4.17.47/js/bootstrap-datetimepicker.min.js"></script>
     <script src="http://code.highcharts.com.cn/highcharts/8.2.2/highcharts.js"></script>
     <script src="http://code.highcharts.com.cn/highcharts/8.2.2/modules/exporting.js"></script>
     <script src="https://img.hcharts.cn/highcharts-plugins/highcharts-zh_CN.js"></script>
@@ -16,6 +34,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.css">
     <link rel="stylesheet" href="http://jqueryui.com/resources/demos/style.css">
     <script src="https://code.highcharts.com/modules/variwide.js"></script>
+<!--    <link th:href="@{../static/css/city-picker.css}" rel="stylesheet" type="text/css" />-->
+<!--    <script th:src="@{../static/js/city-picker.data.js}"></script>-->
+<!--    <script th:src="@{../static/js/city-picker.js}"></script>-->
+        <link href="/css/city-picker.css" rel="stylesheet" type="text/css" />
+        <script src="/js/city-picker.data.js"></script>
+        <script src="/js/city-picker.js"></script>
 </head>
 <body>
 <nav class="navbar navbar-inverse" role="navigation">
@@ -26,12 +50,40 @@
     </div>
 </nav>
 <div>
+        <div class="row" style="padding-top:10px">
+            <div class="col-md-12 text-center">
+                <div class="list-group list-group-horizontal" id="city">
+                    <a href="#" id="1451" class="list-group-item active">北京</a>
+                    <a href="#" id="1485" class="list-group-item">南京</a>
+                    <a href="#" id="1437" class="list-group-item">上海</a>
+                    <a href="#" id="1539" class="list-group-item">深圳</a>
+                    <a href="#" id="1449" class="list-group-item">广州</a>
+                    <a href="#" id = "1453" class="list-group-item">重庆</a>
+                    <a href="#" id = "1450" class="list-group-item">成都</a>
+                    <a href="#" id = "1529" class="list-group-item">武汉</a>
+                    <a href="#" id="1522" class="list-group-item">郑州</a>
+                    <a href="#" id="1452" class="list-group-item">天津</a>
+                    <a href="#" id = "1569" class="list-group-item">西安</a>
+                    <a href="#" id = "1470" class="list-group-item">呼和浩特</a>
+                    <a href="#" id="1580" class="list-group-item">乌鲁木齐</a>
+                    <a href="#" id="1454" class="list-group-item">石家庄</a>
+                    <a href="#" id = "1481" class="list-group-item">哈尔滨</a>
+                    <a href="#" id="1501" class="list-group-item">厦门</a>
+                    <a href="#" id="1555" class="list-group-item">三亚</a>
+                    <a href="#" id="0" class="list-group-item">
+                        <button data-toggle="modal" data-target="#myModal">
+                            更多
+                        </button>
+                    </a>
+                </div>
+            </div>
+        </div>
+
         <div class="row">
             <div id="container" class="col-md-12"></div>
         </div>
         <div class='row'>
-            <div class="col-md-4"></div>
-            <div class="col-md-1">选择日期</div>
+            <div class="col-md-5"></div>
             <div class="col-md-2">
                 <div class="form-group">
                     <div class='input-group date' id='datetimepicker1'>
@@ -45,17 +97,71 @@
             <div class="col-md-5"></div>
         </div>
         <div class="row">
+            <div class="col-md-2"></div>
+            <div id="pie" class="col-md-3"></div>
             <div class="col-md-1"></div>
-            <div id="pie" class="col-md-4"></div>
-            <div id="react" class="col-md-6"></div>
-            <div class="col-md-1"></div>
+            <div id="react" class="col-md-4"></div>
+            <div class="col-md-2"></div>
         </div>
+
+    <!-- 模态框（Modal） -->
+    <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">
+                        &times;
+                    </button>
+                    <h4 class="modal-title" id="myModalLabel">
+                        选择城市
+                    </h4>
+                </div>
+                <div class="docs-methods">
+                    <form class="form-inline">
+                        <div id="distpicker">
+                            <div class="form-group">
+                                <div style="position: relative;">
+                                    <input id="city-picker3" class="form-control" readonly type="text" value="江苏省/常州市/溧阳市" data-toggle="city-picker">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <button class="btn btn-warning" id="reset" type="button">重置</button>
+                                <button class="btn btn-danger" id="destroy" type="button">确定</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">关闭
+                    </button>
+                    <button type="button" class="btn btn-primary">
+                        提交更改
+                    </button>
+                </div>
+            </div><!-- /.modal-content -->
+        </div><!-- /.modal -->
+    </div>
 
 </div>
 
 
 <script>
     $(function(){
+        showByCity(1451);
+        $('#city a').on('click', function (e) {
+            e.preventDefault()
+            $(this).siblings('a').removeClass('active');  // 删除其兄弟元素的样式
+            $(this).addClass('active');
+            if($(this).attr("id") != '0'){
+                showByCity($(this).attr("id"));
+            }else{
+                console.log("待处理");
+            }
+
+        })
+    });
+
+    function showByCity(id) {
         Date.prototype.format = function(fmt) {
             var o = {
                 "M+" : this.getMonth()+1,                 //月份
@@ -91,27 +197,30 @@
             }
         });
 
-        $("#datepicker").datepicker({
-            defaultDate: new Date(),
-            dateFormat:"yy-mm-dd",
-            onSelect: function (dateText) {
-                $.ajax({
-                    url:'/aqi/getPidData/1451?tmp='+dateText,//请求数据的地址
-                    type : "get",
-                    async : true,            //异步请求（同步请求将会锁住浏览器，用户其他操作必须等待请求完成才可以执行）
-                    data : {},
-                    dataType : "json",        //返回数据形式为json
-                    success:function(result){
-                        pie(result['pie'])
-                        react(result['react'])
-                    },
-                    error:function(e){
-                    }
-                });
-            }
+        $('#datetimepicker1').datetimepicker({
+            format: 'YYYY-MM-DD',
+            locale: moment.locale('zh-cn'),
+            defaultDate: now,
+        }).on('dp.change',function(ev){
+            let  time = ev.date.valueOf();
+            let datestr = new Date(time).format('yyyy-MM-dd');
+            $.ajax({
+                url:'/aqi/getPidData/1451?tmp='+datestr,//请求数据的地址
+                type : "get",
+                async : true,            //异步请求（同步请求将会锁住浏览器，用户其他操作必须等待请求完成才可以执行）
+                data : {},
+                dataType : "json",        //返回数据形式为json
+                success:function(result){
+                    pie(result['pie'])
+                    react(result['react'])
+                },
+                error:function(e){
+                }
+            });
         });
+
         $.ajax({
-            url:'/aqi/getAqiByCity/1451',//请求数据的地址
+            url:'/aqi/getAqiByCity/'+id,//请求数据的地址
             type : "get",
             async : true,            //异步请求（同步请求将会锁住浏览器，用户其他操作必须等待请求完成才可以执行）
             data : {},
@@ -122,7 +231,7 @@
             error:function(e){
             }
         });
-    });
+    }
 
     function react(react) {
         Highcharts.chart('react', {
