--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -27,6 +27,8 @@
     <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="https://cdn.bootcss.com/moment.js/2.24.0/moment-with-locales.js"></script>
     <script src="https://cdn.bootcss.com/bootstrap-datetimepicker/4.17.47/js/bootstrap-datetimepicker.min.js"></script>
+    <link href="https://cdn.bootcdn.net/ajax/libs/bootstrap-select/1.14.0-beta/css/bootstrap-select.min.css" rel="stylesheet">
+    <script src="https://cdn.bootcdn.net/ajax/libs/bootstrap-select/1.14.0-beta/js/bootstrap-select.min.js"></script>
     <script src="http://code.highcharts.com.cn/highcharts/8.2.2/highcharts.js"></script>
     <script src="http://code.highcharts.com.cn/highcharts/8.2.2/modules/exporting.js"></script>
     <script src="https://img.hcharts.cn/highcharts-plugins/highcharts-zh_CN.js"></script>
@@ -40,12 +42,19 @@
         <link href="/css/city-picker.css" rel="stylesheet" type="text/css" />
         <script src="/js/city-picker.data.js"></script>
         <script src="/js/city-picker.js"></script>
+
 </head>
 <body>
 <nav class="navbar navbar-inverse" role="navigation">
     <div class="container-fluid">
         <div class="navbar-header">
             <a class="navbar-brand" href="#">雾霾时时报</a>
+        </div>
+        <div class="nav navbar-nav" style="padding-top:10px;padding-right: 30px; height: 15px">
+            <select class="selectpicker" style="height: 15px">
+                <option value="1">中国标椎</option>
+                <option value="2">美国标准</option>
+            </select>
         </div>
     </div>
 </nav>
@@ -75,7 +84,6 @@
                     <a href="#" id="1465" class="list-group-item">太原</a>
                     <a href="#" id = "1474" class="list-group-item">大连</a>
                     <a href="#" id="1565" class="list-group-item">昆明</a>
-                    <a href="#" id="1577" class="list-group-item">西宁</a>
                     <a href="#" id = "1532" class="list-group-item">长沙</a>
                 </div>
             </div>
@@ -135,21 +143,33 @@
 
 <script>
     $(function(){
-        showByCity(1451);
+        $(".selectpicker").selectpicker('val','1');//默认选中 value=“selectrateid” 的option
+        $(".selectpicker").selectpicker('refresh');
+        let selected = $('.selectpicker option:selected').val();
+        showByCity(1451, selected);
         $('#city a').on('click', function (e) {
             e.preventDefault()
             $(this).siblings('a').removeClass('active');  // 删除其兄弟元素的样式
             $(this).addClass('active');
             if($(this).attr("id") != '0'){
-                showByCity($(this).attr("id"));
+                showByCity($(this).attr("id"), selected);
             }else{
                 console.log("待处理");
             }
-
         })
+
+        $('.selectpicker').on('change', function(){
+            var selected = $('.selectpicker option:selected').val();
+            $('#city').children().map(function (index, e) {
+                if($(this).hasClass('active')){
+                    showByCity($(this).attr('id'), selected);
+                }
+            });
+        });
     });
 
     function search() {
+        let selected = $('.selectpicker option:selected').val();
        let city = $('#keyword').val();
         $.ajax({
             url:'/aqi/getAqiByCityName/'+city,//请求数据的地址
@@ -160,7 +180,7 @@
             success:function(result){
                 $('#keyword').val("");
                 if(result.code == 200){
-                    showByCity(result.data);
+                    showByCity(result.data, selected);
                 }else{
                     console.log(result.msg);
                     alert(result.msg);
@@ -172,7 +192,8 @@
         });
     }
 
-    function showByCity(id) {
+    function showByCity(id, type) {
+        console.log(type);
         Date.prototype.format = function(fmt) {
             var o = {
                 "M+" : this.getMonth()+1,                 //月份
@@ -213,8 +234,10 @@
             locale: moment.locale('zh-cn'),
             defaultDate: now,
         }).on('dp.change',function(ev){
+            ev.preventDefault()
             let  time = ev.date.valueOf();
             let datestr = new Date(time).format('yyyy-MM-dd');
+            console.log(id);
             $.ajax({
                 url:'/aqi/getPidData/'+id+'?tmp='+datestr,//请求数据的地址
                 type : "get",
