--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -32,16 +32,13 @@
     <script src="http://code.highcharts.com.cn/highcharts/8.2.2/highcharts.js"></script>
     <script src="http://code.highcharts.com.cn/highcharts/8.2.2/modules/exporting.js"></script>
     <script src="https://img.hcharts.cn/highcharts-plugins/highcharts-zh_CN.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.css">
-    <link rel="stylesheet" href="http://jqueryui.com/resources/demos/style.css">
     <script src="https://code.highcharts.com/modules/variwide.js"></script>
 <!--    <link th:href="@{../static/css/city-picker.css}" rel="stylesheet" type="text/css" />-->
 <!--    <script th:src="@{../static/js/city-picker.data.js}"></script>-->
 <!--    <script th:src="@{../static/js/city-picker.js}"></script>-->
-        <link href="/css/city-picker.css" rel="stylesheet" type="text/css" />
-        <script src="/js/city-picker.data.js"></script>
-        <script src="/js/city-picker.js"></script>
+        <!--<link href="/css/city-picker.css" rel="stylesheet" type="text/css" />-->
+        <!--<script src="/js/city-picker.data.js"></script>-->
+        <!--<script src="/js/city-picker.js"></script>-->
 
 </head>
 <body>
