--- a/src/main/resources/templates/noresult.html
+++ b/src/main/resources/templates/noresult.html
@@ -4,19 +4,58 @@
     <meta charset="utf-8"><link rel="icon" href="https://jscdn.com.cn/highcharts/images/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
-        /* css 代码  */
+        .list-group-horizontal .list-group-item {
+            display: inline-block;
+        }
+        .list-group-horizontal .list-group-item {
+            margin-bottom: 0;
+            margin-left:-4px;
+            margin-right: 0;
+        }
+        .list-group-horizontal .list-group-item:first-child {
+            border-top-right-radius:0;
+            border-bottom-left-radius:4px;
+        }
+        .list-group-horizontal .list-group-item:last-child {
+            border-top-right-radius:4px;
+            border-bottom-left-radius:0;
+        }
     </style>
+    <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.bootcss.com/bootstrap-datetimepicker/4.17.47/css/bootstrap-datetimepicker.min.css" rel="stylesheet">
+    <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.js"></script>
+    <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="https://cdn.bootcss.com/moment.js/2.24.0/moment-with-locales.js"></script>
+    <script src="https://cdn.bootcss.com/bootstrap-datetimepicker/4.17.47/js/bootstrap-datetimepicker.min.js"></script>
+    <link href="https://cdn.bootcdn.net/ajax/libs/bootstrap-select/1.14.0-beta/css/bootstrap-select.min.css" rel="stylesheet">
+    <script src="https://cdn.bootcdn.net/ajax/libs/bootstrap-select/1.14.0-beta/js/bootstrap-select.min.js"></script>
     <script src="https://code.highcharts.com.cn/jquery/jquery-1.8.3.min.js"></script>
     <script src="https://code.highcharts.com/highcharts.js"></script>
     <script src="https://code.highcharts.com/modules/exporting.js"></script>
     <script src="https://img.hcharts.cn/highcharts-plugins/highcharts-zh_CN.js"></script>
 </head>
 <body>
+<div class="row" th:insert="~{public :: public_top(1)}"></div>
+<div th:insert="~{public :: public_city}"></div>
 <div id="container" style="min-width:400px;height:400px"></div>
 <script>
     $(function () {
+        showByCity(1451);
+        $('#city a').on('click', function (e) {
+            e.preventDefault()
+            $(this).siblings('a').removeClass('active');  // 删除其兄弟元素的样式
+            $(this).addClass('active');
+            if($(this).attr("id") != '0'){
+                showByCity($(this).attr("id"));
+            }else{
+                console.log("待处理");
+            }
+        })
+    })
+
+    function showByCity(id) {
         $.ajax({
-            url:'/aqi/no/result/1451',//请求数据的地址
+            url:'/aqi/no/result/' + id,//请求数据的地址
             type : "get",
             async : true,            //异步请求（同步请求将会锁住浏览器，用户其他操作必须等待请求完成才可以执行）
             data : {},
@@ -27,7 +66,7 @@
             error:function(e){
             }
         });
-    })
+    }
 
     function noresult(result) {
         var chart = Highcharts.chart('container', {
