--- a/src/main/resources/templates/public.html
+++ b/src/main/resources/templates/public.html
@@ -10,6 +10,7 @@
             <ul class="nav navbar-nav">
                 <li th:class="${index==0?'active':''}"><a href="/aqi/index">首页</a></li>
                 <li th:class="${index==1?'active':''}"><a href="/aqi/area">区域</a></li>
+                <li th:class="${index==2?'active':''}"><a href="/aqi/compare">对比</a></li>
             </ul>
         </div>
         <div class="nav navbar-nav navbar-right" style="padding-top:10px;padding-right: 30px; height: 15px">
