--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -29,9 +29,13 @@
     <script src="https://cdn.bootcss.com/bootstrap-datetimepicker/4.17.47/js/bootstrap-datetimepicker.min.js"></script>
     <link href="https://cdn.bootcdn.net/ajax/libs/bootstrap-select/1.14.0-beta/css/bootstrap-select.min.css" rel="stylesheet">
     <script src="https://cdn.bootcdn.net/ajax/libs/bootstrap-select/1.14.0-beta/js/bootstrap-select.min.js"></script>
-    <script src="http://code.highcharts.com.cn/highcharts/8.2.2/highcharts.js"></script>
-    <script src="http://code.highcharts.com.cn/highcharts/8.2.2/modules/exporting.js"></script>
+<!--    <script src="http://code.highcharts.com.cn/highcharts/8.2.2/highcharts.js"></script>-->
+<!--    <script src="http://code.highcharts.com.cn/highcharts/8.2.2/modules/exporting.js"></script>-->
+    <script src="https://code.highcharts.com.cn/highcharts/highcharts.js"></script>
     <script src="https://code.highcharts.com/modules/variwide.js"></script>
+    <script src="https://code.highcharts.com.cn/highcharts/highcharts-more.js"></script>
+    <script src="https://code.highcharts.com.cn/highcharts/modules/solid-gauge.js"></script>
+    <script src="https://img.hcharts.cn/highcharts-plugins/highcharts-zh_CN.js"></script>
 
 </head>
 <body>
@@ -300,7 +304,6 @@
         });
     }
 
-
     function  show(s) {
         var chart = Highcharts.chart({
             chart: {
@@ -311,7 +314,7 @@
                 text: 'AQI污染指数趋势图'
             },
             subtitle: {
-                text: '全国AQI污染指数统计情况'
+                text: '只显示近三十天的数据 <a href="#">查看历史数据</a>'
             },
             xAxis: {
                 type: 'datetime',
@@ -383,7 +386,7 @@
                     }
                 }, { // Strong breeze
                     from: 300,
-                    to: 400,
+                    to: 1000,
                     color: 'rgba(126, 0, 35, 0.1)',
                     label: {
                         text: '污染爆表',
