--- a/src/main/resources/templates/public.html
+++ b/src/main/resources/templates/public.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<title>折线图</title>
+<title>模糊笔记</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <body>
-<nav class="navbar navbar-inverse" role="navigation" th:fragment="public_top(index)">
+<nav class="navbar navbar-inverse " role="navigation" th:fragment="public_top(index)">
     <div class="container-fluid">
         <div class="navbar-header">
             <div style="padding-left: 5px">
-               <a class="navbar-brand" href="#">雾霾时时报</a>
+                <a class="navbar-brand" href="#">模糊笔记</a>
             </div>
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navBar">
                 <span class="icon-bar"></span>
@@ -17,9 +17,9 @@
         </div>
         <div class="collapse navbar-collapse is-collapse"  id="navBar">
             <ul class="nav navbar-nav">
-                <li th:class="${index==0?'active':''}"><a href="/aqi/index">首页</a></li>
-                <li th:class="${index==1?'active':''}"><a href="/aqi/area">区域</a></li>
-                <li th:class="${index==2?'active':''}"><a href="/aqi/compare">对比</a></li>
+                <li th:class="${index==0?'active':''}"><a href="/index">首页</a></li>
+                <li th:class="${index==1?'active':''}"><a href="/area">区域</a></li>
+                <li th:class="${index==2?'active':''}"><a href="/compare">对比</a></li>
             </ul>
             <div style="padding-top: 7px">
                 <select class="selectpicker" data-width="100px" >
@@ -30,7 +30,6 @@
         </div>
     </div>
 </nav>
-
 <div class="row" style="padding-top:10px" th:fragment="public_city">
     <div class="col-md-10 text-center">
         <div class="list-group list-group-horizontal" id="city">
