--- a/src/main/resources/templates/public.html
+++ b/src/main/resources/templates/public.html
@@ -20,6 +20,7 @@
                 <li th:class="${index==0?'active':''}"><a href="/index">首页</a></li>
                 <li th:class="${index==1?'active':''}"><a href="/area">区域</a></li>
                 <li th:class="${index==2?'active':''}"><a href="/compare">对比</a></li>
+                <li th:class="${index==3?'active':''}"><a href="/rank">排行榜</a></li>
             </ul>
             <div style="padding-top: 7px">
                 <select class="selectpicker" data-width="100px" >
