--- a/src/main/resources/templates/public.html
+++ b/src/main/resources/templates/public.html
@@ -41,7 +41,7 @@
             <a href="#" id="1449" class="list-group-item">广州</a>
             <a href="#" id = "1453" class="list-group-item">重庆</a>
             <a href="#" id = "1450" class="list-group-item">成都</a>
-            <a href="#" id = "1529" class="list-group-item">武汉</a>
+<!--            <a href="#" id = "1529" class="list-group-item">武汉</a>-->
             <a href="#" id="1522" class="list-group-item">郑州</a>
             <a href="#" id="1452" class="list-group-item">天津</a>
             <a href="#" id = "1569" class="list-group-item">西安</a>
