--- a/src/main/resources/templates/rank.html
+++ b/src/main/resources/templates/rank.html
@@ -61,7 +61,7 @@
                 </div>
             </div>
         </div>
-        <div style="font-size: 12px; text-align: center">排行系数计算公式: 优小时数 x 10 + 良小时数 x 5 + 轻度的小时数 x 1 + 中度小时数 x -3 + 重度小时数 x -5 + 爆表小时数 x -10(三十天内), 负数取绝对值</div>
+        <div style="font-size: 12px; text-align: center">排行系数计算公式: 优小时数 x 10 + 良小时数 x 5 + 轻度的小时数 x 1 + 中度小时数 x -3 + 重度小时数 x -5 + 爆表小时数 x -10, 负数取绝对值</div>
     </div>
 
 </div>
@@ -102,7 +102,7 @@
                 type: 'bar'
             },
             title: {
-                text: '城市AQI排行榜'
+                text: '城市AQI今日排行榜'
             },
             xAxis: {
                 categories: x
@@ -135,7 +135,7 @@
                 type: 'bar'
             },
             title: {
-                text: '城市AQI排行榜'
+                text: '城市AQI今日排行榜'
             },
             xAxis: {
                 categories: x
