update : 增加地图模块

--- a/src/main/resources/templates/public.html
+++ b/src/main/resources/templates/public.html
@@ -18,6 +18,7 @@
         <div class="collapse navbar-collapse is-collapse"  id="navBar">
             <ul class="nav navbar-nav">
                 <li th:class="${index==0?'active':''}"><a href="/index">首页</a></li>
+                <li th:class="${index==4?'active':''}"><a href="/map">地图</a></li>
                 <li th:class="${index==1?'active':''}"><a href="/area">区域</a></li>
                 <li th:class="${index==2?'active':''}"><a href="/compare">对比</a></li>
                 <li th:class="${index==3?'active':''}"><a href="/rank">排行榜</a></li>
